# ibd

./: CMakeLists.txt  LICENSE  README.md
ibd/: CMakeLists.txt  README.md  ibd.c  log.c  sysconfig.h.in  yamlconfig.c
ibd/include/ibd/: config.h  error.h  log.h  network.h  plugin.h  plugins.h  server.h  yamlconfig.h
ibd/plugins/: CMakeLists.txt  log  nickserv.c
ibd/src/: child.c  config.c  config.l  config.y  echo.c  ibd.c  log.c  network.c
libirc/: CMakeLists.txt  irc.c  libirc-1.0.pc  libirc-1.0.pc.in  message.c  strbuf.c
libirc/irc/: irc.h  message.h  strbuf.h
libirc/tests/: CMakeLists.txt  strbuf-test.c
