CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(EVENT REQUIRED libevent)

SET(FILES
  "ibd.c"
  "include/ibd/log.h"
  "log.c"
  )
SET(TARGET "ibd")

INCLUDE_DIRECTORIES(
  ${IRC_INCLUDE_DIRS}
  ${EVENT_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  )

LINK_DIRECTORIES(${EVENT_LIBRARY_DIRS})

ADD_DEFINITIONS("-Wall -Werror")

ADD_EXECUTABLE(${TARGET} ${FILES})
TARGET_LINK_LIBRARIES(${TARGET}
  ${IRC_LIBRARIES}
  ${EVENT_LIBRARIES}
  )
