CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(EVENT REQUIRED libevent)
PKG_CHECK_MODULES(SSL REQUIRED openssl)

CHECK_INCLUDE_FILE("tls.h" TLS_INCLUDE_DIR)
FIND_LIBRARY(TLS "tls")

IF(TLS-NOTFOUND OR NOT TLS_INCLUDE_DIR)
  MESSAGE(ERROR "libtls not found")
ENDIF()

SET(FILES
  "ibd.c"
  "include/ibd/log.h"
  "log.c"
  )
SET(TARGET "ibd")

INCLUDE_DIRECTORIES(
  ${IRC_INCLUDE_DIRS}
  ${EVENT_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${SSL_INCLUDE_DIR}
  )

LINK_DIRECTORIES(${EVENT_LIBRARY_DIRS})

ADD_DEFINITIONS("-Wall -Werror")

ADD_EXECUTABLE(${TARGET} ${FILES})
TARGET_LINK_LIBRARIES(${TARGET}
  ${IRC_LIBRARIES}
  ${EVENT_LIBRARIES}
  ${SSL_LIBRARIES}
  ${TLS}
  )
