CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(BISON REQUIRED)
FIND_PACKAGE(FLEX REQUIRED)

PKG_CHECK_MODULES(EVENT REQUIRED libevent)
PKG_CHECK_MODULES(SSL REQUIRED openssl)

CHECK_INCLUDE_FILE("tls.h" TLS_INCLUDE_DIR)
FIND_LIBRARY(TLS "tls")

IF(TLS-NOTFOUND OR NOT TLS_INCLUDE_DIR)
  MESSAGE(ERROR "libtls not found")
ENDIF()

SET(SOURCES
  "src/ibd.c"
  "src/log.c"
  "src/config.c"
  "src/network.c"
  "src/echo.c"
  )

SET(HEADERS
  "include/ibd/network.h"
  "include/ibd/config.h"
  "include/ibd/log.h"
  "include/ibd/plugin.h"
  )

SET(TARGET "ibd")

INCLUDE_DIRECTORIES(
  ${IRC_INCLUDE_DIRS}
  ${EVENT_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${SSL_INCLUDE_DIR}
  )

SET(BISON_FILE "src/config.y")
SET(BISON_OUTPUT_FILE "${CMAKE_CURRENT_BINARY_DIR}/config.y.c")
BISON_TARGET(DICE_PARSER ${BISON_FILE} ${BISON_OUTPUT_FILE})

SET(FLEX_FILE "src/config.l")
SET(FLEX_OUTPUT_FILE "${CMAKE_CURRENT_BINARY_DIR}/config.tab.c")
FLEX_TARGET(DICE_LEXER ${FLEX_FILE} ${FLEX_OUTPUT_FILE})

LINK_DIRECTORIES(${EVENT_LIBRARY_DIRS})

ADD_DEFINITIONS("-Wall -Werror")

ADD_EXECUTABLE(${TARGET} ${SOURCES} ${HEADERS}
  ${BISON_OUTPUT_FILE}
  ${FLEX_OUTPUT_FILE}
  )
TARGET_LINK_LIBRARIES(${TARGET}
  ${IRC_LIBRARIES}
  ${EVENT_LIBRARIES}
  ${SSL_LIBRARIES}
  ${TLS}
  )
