CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(CHECK REQUIRED check)

LINK_DIRECTORIES(${CHECK_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${IRC_INCLUDE_DIRS} ${CHECK_INCLUDE_DIRS})

FILE(GLOB FILES "*-test.c")

FOREACH(FILE ${FILES})
  STRING(REPLACE ".c" "" TESTFILE ${FILE})
  GET_FILENAME_COMPONENT(TEST ${TESTFILE} NAME)

  ADD_EXECUTABLE(${TEST} ${FILE})
  TARGET_LINK_LIBRARIES(${TEST}
    ${CHECK_LIBRARIES}
    ${CHECK_LDFLAGS}
    ${IRC_LIBRARIES})

  ADD_TEST(NAME ${TEST} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${TEST})
ENDFOREACH()
